--- a/WinAES/WinAES.rc
+++ b/WinAES/WinAES.rc
@@ -27,8 +27,8 @@ LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_SIMPLIFIED
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,0,2,2
- PRODUCTVERSION 0,0,2,2
+ FILEVERSION 0,0,2,3
+ PRODUCTVERSION 0,0,2,3
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "WinAES Executable"
             VALUE "CompanyName", "FatLYZ.COM"
             VALUE "FileDescription", "WinAES"
-            VALUE "FileVersion", "0.0.2.2"
+            VALUE "FileVersion", "0.0.2.3"
             VALUE "InternalName", "WinAES"
-            VALUE "LegalCopyright", "(C)2012  FatLYZ.COM"
+            VALUE "LegalCopyright", "(C) 2014  FatLYZ.COM"
             VALUE "OriginalFilename", "WinAES.exe"
             VALUE "ProductName", "WinAES"
-            VALUE "ProductVersion", "0.0.2.2"
+            VALUE "ProductVersion", "0.0.2.3"
         END
     END
     BLOCK "VarFileInfo"
@@ -126,12 +126,12 @@ IDR_MAINFRAME           ICON                    "res\\Log Off.ico"
 IDD_WinAES_DIALOG DIALOGEX 0, 0, 503, 289
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_WINDOWEDGE | WS_EX_APPWINDOW
-CAPTION "WinAES x64 Ver: 0.2.2"
+CAPTION "WinAES x64 Ver: 0.2.3"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     CONTROL         "",_TAB_MAIN,"SysTabControl32",0x0,10,10,484,256
     PUSHBUTTON      "E&xit",IDCANCEL,444,268,50,16
-    LTEXT           "WinAES Ver: 0.2.2 (64-bit)",IDC_STATIC,13,271,248,11
+    LTEXT           "WinAES Ver: 0.2.3 (64-bit)",IDC_STATIC,13,271,248,11
 END
 
 IDD_TAB_ABOUT DIALOGEX 0, 0, 476, 240
@@ -139,7 +139,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "WinAES",IDC_STATIC,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,57,27,104,10
-    CONTROL         "Version: 0.2.2 (64-bit, build 120628),  Copyright (C) 2012 FatLYZ.COM, All rights reserved.",IDC_STATIC,
+    CONTROL         "Version: 0.2.3 (64-bit, build 20141108), (C) 2014 FatLYZ.COM. All rights reserved.",IDC_STATIC,
                     "Static",SS_LEFTNOWORDWRAP | WS_GROUP,58,38,378,10
     LTEXT           "WinAES is provided as freeware. You are granted the right to use and to make an unlimited number of copies of these software.",IDC_STATIC,58,68,321,17
     LTEXT           "AES(Advanced Encryption Standard), one of the most secure block ciphers in the world.",IDC_STATIC,58,160,307,9
@@ -147,7 +147,7 @@ BEGIN
                     "Static",SS_LEFTNOWORDWRAP | WS_GROUP,58,117,188,10
     LTEXT           "The AES functions in this software are based in part on the descriptions in FIPS-197 document.",IDC_STATIC,58,170,353,9
     LTEXT           "The Camellia functions in this software are based in part on the descriptions in RFC 3713 document.",IDC_STATIC,58,180,353,9
-    CONTROL         "Email: fatlyz.pub@gmail.com",IDC_STATIC,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,58,127,188,10
+    CONTROL         "Email: contact@fatlyz.com",IDC_STATIC,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,58,127,188,10
     CONTROL         "URL: http://fatlyz.com",IDC_STATIC,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,58,137,188,10
     LTEXT           "These software are provided ""as-is"".No warranty of any kind is expressed or implied.",IDC_STATIC,58,85,321,12
     LTEXT           "The author will not be liable for data loss, damages, loss of profits or any other kind of loss while using or misusing this software.",IDC_STATIC,58,94,321,17
@@ -167,9 +167,9 @@ BEGIN
     PUSHBUTTON      "&Encrypt",_BTN_START,368,204,53,23
     PUSHBUTTON      "&Stop",_BTN_STOP,423,204,33,23
     LTEXT           "Drag files here or click ""Add Files..""",IDC_STATIC,11,5,132,9
-    RTEXT           "Password:",IDC_STATIC,136,218,42,9
+    RTEXT           "Password:",IDC_STATIC,135,218,42,9
     GROUPBOX        "Options",IDC_STATIC,12,192,341,42
-    RTEXT           "Cipher Type:",IDC_STATIC,122,204,56,9
+    RTEXT           "Cipher:",IDC_STATIC,130,204,47,9
     GROUPBOX        "Operations",IDC_STATIC,357,192,106,42
     PUSHBUTTON      "&Add Files...",_BTN_ADD,11,173,63,16
     PUSHBUTTON      "&Remove",_BTN_REMOVE,141,173,63,16
@@ -183,7 +183,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     GROUPBOX        "Select hash functions and file:",IDC_STATIC,9,6,265,59
     GROUPBOX        "Status",IDC_STATIC,278,6,187,59
-    GROUPBOX        "Results",IDC_STATIC,9,67,456,165
+    GROUPBOX        "Result",IDC_STATIC,9,67,456,165
     PUSHBUTTON      "&Open...",_BTN_OPEN_H,178,42,53,17
     EDITTEXT        _EDIT_RESULTS_H,17,78,442,149,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL
     CONTROL         "",_PROG_H,"msctls_progress32",0x0,330,38,118,10
@@ -193,9 +193,9 @@ BEGIN
     PUSHBUTTON      "&Stop",_BTN_TERM_H,232,42,35,17,WS_DISABLED
     CONTROL         "MD5",_CHK_MD5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,22,57,8
     CONTROL         "SHA-1",_CHK_SHA1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,33,57,8
-    CONTROL         "SHA-2(SHA256)",_CHK_SHA256,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,44,65,8
-    CONTROL         "SHA-2(SHA512)",_CHK_SHA512,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,22,82,8
-    CONTROL         "Keccak(SHA-3 Finalist)",_CHK_KECCAK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,33,86,8
+    CONTROL         "SHA-2 (SHA256)",_CHK_SHA256,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,44,65,8
+    CONTROL         "SHA-2 (SHA512)",_CHK_SHA512,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,22,82,8
+    CONTROL         "SHA-3",_CHK_KECCAK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,33,86,8
     LTEXT           "Drag a file into this window or click ""Open...""",IDC_STATIC,179,20,86,17
 END
 
